--- a/Positioning/Nuestras Coders/css/main.css
+++ b/Positioning/Nuestras Coders/css/main.css
@@ -6,22 +6,101 @@
 
 body {
 	font-family: Tahoma;
+	width: 800px;
+
 }
 
-img.logo {
-	height: 100px;
-	width: 550px;
+div#contenedorglobal {
 	position: relative;
-	top: 30px;
+	background-color: white;
+	left: 200px;
+}
+
+div#contenedorglobal img.logo {
+	width: 550px;
+	height: 100px;
+	position: relative;
 	left: 60px;
+	top: 30px;
+}
+
+hr.menulinehr1 {
+	width: 550px;
+	position: absolute;
+	left: 190px;
+	top: 150px;
+}
+
+div.menu {
+	position: absolute;
+	top: 160px;
+	left: 235px;
+}
+
+div.menu h3.opciones {
+	display: inline-block;
+}
+
+h3.opciones {
+	font-weight: normal;
+	margin-right: 10px;
+}
+
+hr.menulinehr2 {
+	width: 550px;
+	position: absolute;
+	left: 190px;
+	top: 200px;
+}
+
+img.grupal {
+	width: 500px;
+	width: 550px;
+	position: absolute;
+	top: 220px;
+	right: 60px;
+}
+
+hr.lineatexto1 {
+	height: 1px;
+	width: 60px;
+	position: absolute;
+	background-color: black;
+	top: 630px;
+	left: 450px;
+}
+
+div.cajatexto {
+	background-color: white;
+	height: 200px;
+	width: 300px;
+	text-align: center;
+	position: absolute;
+	top: 650px;
+	left: 330px;
+}
+
+hr.lineatexto2 {
+	height: 1px;
+	width: 60px;
+	position: absolute;
+	background-color: black;
+	top: 800px;
+	left: 450px;
+}
+
+div.cajanuestrascoders {
+	position: absolute;
+	top: 450px;
+	left: 30px;
 }
 
 div.caja {
 	background-color: white;
 	position: relative;
 	height: 40px;
-	top: 50px;
-	left: 400px;
+	top: 400px;
+	left: 90px;
 }
 
 div.caja h3.nuestrascoders {
@@ -29,6 +108,7 @@ div.caja h3.nuestrascoders {
 	left: 0px;
 	top: 0px;
 }
+
 div.caja hr.lineacoders {
 	height: 3px;
 	width: 60px;
@@ -41,13 +121,13 @@ div.caja hr.lineacoders {
 div#container {
 	background-color: white;
 	position: relative;
-	top: 80px;
+	top: 400px;
 	left: 60px;
 }
 
 img.profile {
-	height: 150px;
-	height: 150px;
+	height: 200px;
+	width: 200px;
 }
 
 div.pic {
@@ -63,11 +143,110 @@ div.block {
 	display: block;
 }
 
-div p {
+div p.nombreyapellido {
 	font-size: 12px;
 	position: absolute;
-	top: 130px;
-	left: 45px;
+	top: 180px;
+	left: 100px;
 	color: white;
+}
 
+div.informacion {
+	position: absolute;
+	width: 800px;
+	top: 1500px;
+	left: 120px;
+}
+
+div.fotoinformacion {
+	height: 200px;
+	width: 180px;
+	border-radius: 100px;
+	background-image: url("file:///C:/Users/Laboratoria0071/Desktop/Laboratoria2016/ConociendoHTML/Positioning/Nuestras Coders/img/profile-1.png");
+	position: absolute;
+	left: 270px;
+}
+
+h1.tituloinformacion {
+	position: absolute;
+	top:200px;
+	left: 210px;
+}
+
+p.pinformacion {
+	font-size: 20px;
+	width: 600px;
+	position: absolute;
+	top: 270px;
+	left: 60px;
+}
+
+div.habilidadesyportafolio {
+	background-color: white;
+	width: 700px;
+	position: absolute;
+	top: 2000px;
+	left: 120px;
+}
+
+h2.habilidades {
+	text-align: left;
+	margin-top: 50px;
+}
+
+div.plomo1 {
+	background-color: #827F7F;
+	height: 50px;
+	margin: 30px;
+	padding-left: 10px;
+	padding-top: 20px;
+	width: 500px;
+}
+
+div.plomo2 {
+	background-color: #827F7F;
+	height: 50px;
+	margin: 30px;
+	padding-left: 10px;
+	padding-top: 20px;
+	width: 300px;
+}
+
+div.plomo3 {
+	background-color: #827F7F;
+	height: 50px;
+	margin: 30px;
+	padding-left: 10px;
+	padding-top: 20px;
+	width: 150px;
+}
+
+p.letrashabilidades {
+	color: white;
+	text-align: left;
+	font-weight: bold;
+}
+
+div.portafolio1 {
+	display: block;
+}
+
+div.portafolio2 {
+	display: block;
+}
+
+img.profile2 {
+	height: 100px;
+	width: 150px;
+}
+
+div.pic2 {
+	display: inline-block;
+	margin: 20px;
+	margin-top: 30px;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
