--- a/Grid System/css/style.css
+++ b/Grid System/css/style.css
@@ -77,7 +77,8 @@ div p .link1 {
 	height: 220px;
 	width: 220px;
 	position: relative;
-	border: 7px double #CCCCCC
+	border: 3px solid white;
+	outline: 2px solid #CCCCCC;
 }
 
 .link2 {
@@ -101,7 +102,8 @@ article {
 .imgarticle {
 	width: 130px;
 	height: 130px;
-	border: 4px double #CCCCCC;
+	border: 3px solid white;
+	outline: 2px solid #CCCCCC;
 }
 
 .link3 {
