Cinema Layout almost finished

--- a/Cinema Layout/css/utilities.css
+++ b/Cinema Layout/css/utilities.css
@@ -1,4 +1,4 @@
-/* Util class */
+/* Util class */
 
 .text-center {
 	text-align: center;
@@ -17,7 +17,7 @@
 }
 .mgt-4 {
 	margin-top: 4%;
-}
+}
 
 .text-gray{
 	color:rgba(128, 128, 128, 0.36);
