--- a/Cinema Layout/css/style.css
+++ b/Cinema Layout/css/style.css
@@ -1,74 +1,158 @@
 body {
 	font-family: 'Roboto';
+	color: #D0D0D0;
+}
+
+p, pre {
+	font-size: 11px;
+}
+
+a {
+	text-decoration: none;
 }
 
 header {
-	margin-left: 20px;
-	padding-bottom: 10px;
-	padding-top: 5px;
 	background-color: #F5F5F5;
 }
 
 .logo {
+	width: 310px;
 	height: 50px;
-	width: 350px;
-	float: left;
+	margin-left: 40px;
 }
 
 .movie_theater {
-	color: #CECECE;
-	font-family: Arial;
-	font-size: 10px;
-	margin-left: 90px;
-	margin-top: 20px;
+	font-weight: normal;
+	margin: 17px 0 0 30px;
 }
 
-#search_button {
-	width: 300px;
-	position: relative;
-	right: -200px;
-}
-
-#search_button input#search {
-	width: 200px;
-	height: 40px;
-	background-color: transparent;
+#search {
+	margin-top: 3px;
+	height: 35px;
+	background-color: #F5F5F5;
 	border: 1px solid #B5B5B5;
-	font-size: 12px;
-	float: left;
-	color: #A8A8A8;
-	padding-left: 10px;
-	outline: none;
+	padding: 0 0 0 7px;
 }
 
-.icon {
-	position: absolute;
-	top: 10px;
-	right: 110px;
+.search_icon {
+	position: relative;
+	left: 170px;
 	color: #B5B5B5;
-	z-index: 1;
 }
 
 .banner {
-	position: relative;
-	top: -75px;
+	background-image: url('../img/banner.jpg');
+	height: 450px;
+	background-size: 870px;
+	margin-left: 0px;
 	z-index: -1;
+	position: relative;
+	top: -45px;
 }
 
-.icono {
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	left: 400px;
-	top: 305px;
+.big_hero_icon {
+	height: 60px;
+	width: 60px;
+	margin: 210px 0 0 243px;
 }
 
-.descripcion {
-	position: absolute;
-	right: 10px;
+.main_text_background {
+	background-color: #393939;
+	height: 405px;
 }
 
-.big_hero {
-	font-size: 50px;
+.main_text_box {
 	color: #D3D3D3;
+	margin-top: 15px;
+}
+
+.big_hero_heading {
+	font-size: 35px;
+	font-weight: normal;
+}
+
+hr {
+  	margin-top: 10px;
+  	border: 0;
+  	clear:both;
+  	display:block;
+	width: 280px;               
+	background-color:#6C6C6C;
+	height: 1px;
+}
+
+.all_age {
+	float: left;
+	width: 55px;
+	border: 1px solid #3BCF68;
+	border-radius: 5px;
+	text-align: center;
+	font-size: 11px;
+	color: #3BCF68;
+	padding: 5px;
+	margin: 15px 10px 0 -13px;
+}
+
+.directors {
+	margin: 20px 0 0 20px;
+}
+
+.box_ratting {
+	margin: 15px 0 5px -17px;
+	width: 310px;	
+}
+
+.pre_text {
+	margin: 7px;
+	font-family: 'Roboto', monospace;
+}
+
+.main_text_bold {
+	font-weight: bold;
+}
+
+.main_text_description {
+	line-height: 15px;
+	margin: 10px 0 0 7px;
+}
+
+.same_features_button {
+	color: white;
+	font-size: 14px;
+	padding: 10px;
+}
+
+.main_buttons {
+	height: 40px;
+	width: 150px;
+	margin: 15px 0 5px -10px;
+	border-radius: 4px;
+}
+
+.youtube_button {
+	background-color: #DFB636;
+}
+
+.purchase_button {
+	background-color: #BB7B29;
+}
+
+.movies_bigbox {
+	background-color: #DFB636;
+	padding: 25px 65px;
+	margin-top: -75px;
+}
+
+.img_movies_box {
+	display: inline-block;
+}
+
+.img_movies {
+	height: 170px;
+	width: 150px;
+}
+
+object {
+	width: 100%;
+	height: 200px;
 }
