--- a/Cinema Layout/css/style.css
+++ b/Cinema Layout/css/style.css
@@ -40,10 +40,10 @@ header {
 	color: #B5B5B5;
 }
 
-.banner {
+#banner {
 	background-image: url('../img/banner.jpg');
 	height: 450px;
-	background-size: 870px;
+	background-size: 100%;
 	margin-left: 0px;
 	z-index: -1;
 	position: relative;
@@ -53,10 +53,10 @@ header {
 .big_hero_icon {
 	height: 60px;
 	width: 60px;
-	margin: 210px 0 0 243px;
+	margin: 177px 0 0 215px;
 }
 
-.main_text_background {
+#main_text_background {
 	background-color: #393939;
 	height: 405px;
 }
@@ -68,16 +68,15 @@ header {
 
 .big_hero_heading {
 	font-size: 35px;
-	font-weight: normal;
 }
 
-hr {
+.main_line {
   	margin-top: 10px;
   	border: 0;
   	clear:both;
   	display:block;
 	width: 280px;               
-	background-color:#6C6C6C;
+	background-color: #6C6C6C;
 	height: 1px;
 }
 
@@ -107,10 +106,6 @@ hr {
 	font-family: 'Roboto', monospace;
 }
 
-.main_text_bold {
-	font-weight: bold;
-}
-
 .main_text_description {
 	line-height: 15px;
 	margin: 10px 0 0 7px;
@@ -120,39 +115,107 @@ hr {
 	color: white;
 	font-size: 14px;
 	padding: 10px;
+	width: 150px;
+	border-radius: 4px;
 }
 
 .main_buttons {
 	height: 40px;
-	width: 150px;
 	margin: 15px 0 5px -10px;
-	border-radius: 4px;
 }
 
 .youtube_button {
 	background-color: #DFB636;
 }
 
-.purchase_button {
+.book_button {
 	background-color: #BB7B29;
 }
 
-.movies_bigbox {
+#movies_bigbox {
 	background-color: #DFB636;
-	padding: 25px 65px;
+	padding: 20px 65px 5px;
 	margin-top: -75px;
 }
 
-.img_movies_box {
-	display: inline-block;
-}
-
 .img_movies {
-	height: 170px;
+	height: 180px;
 	width: 150px;
 }
 
 object {
 	width: 100%;
 	height: 200px;
+}
+
+article {
+	padding: 60px;
+}
+
+.article_bold_headings {
+	margin: 15px 0;
+	font-size: 25px;
+}
+
+.book_your_ticket {
+	color: black;
+	font-size: 35px;
+}
+
+.nobold {
+	font-weight: normal;
+}
+
+.big_book_button {
+	height: 65px;
+	padding: 25px 20px;
+}
+
+.discount_text {
+	color: #BB7B29;
+	font-size: 13px;
+	margin-top: 20px;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+#news {
+	position: relative;
+	left: 65px;
+}
+
+.black_subheadings {
+	color: black;
+}
+
+.lorem_text {
+	margin-bottom: 70px;
+}
+
+.last_lines {
+	width: 570px;
+	position: relative;
+	top: -35px;
+	background-color: #D0D0D0;
+}
+
+.orange_text {
+	color: #E3C15D;
+}
+
+.last_pics {
+	width: 250px;
+	height: 250px;
+	margin-bottom: 30px;	
+}
+
+footer {
+	background-color: #F3F3F3;
+	padding: 30px;
+}
+
+.creator {
+	margin: 30px 0;
 }
