--- a/Chicama/css/main.css
+++ b/Chicama/css/main.css
@@ -1,26 +1,86 @@
 body {
 	font-family: Roboto;
+	margin: 0;
+	padding: 0;
 }
 
-#banner {
-	width: 100%;
-	height: 640px;
+header {
 	background-image: url("../img/grupal.jpg");
+	height: 650px;
+	width: 100%;
 	background-size: 100%;
 }
 
 .sumate_button {
 	background-color: #FCB739;
-	width: 150px;
 	height: 40px;
+	width: 150px;
 	text-align: center;
-	padding-top: 15px;
-	position: relative;
+	position: absolute;
 	top: 60px;
-	left: 175px;
+	left: 160px;
+	padding-top: 15px;
 }
 
-.logo {
-	height: 50px;
-	width: 300px;
+#logo {
+	height: 60px;
+	width: 350px;
+	position: absolute;
+	top: 70px;
+	left: 430px;
 }
+
+ul {
+	list-style-type: none;
+	float: right;
+	margin-right: 150px;
+}
+
+li {
+	float: left;
+	margin: 30px 25px 0 0px;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+}
+
+li a:hover {
+	color: white;
+}
+
+.section_img {
+	height: 170px;
+	width: 250px;
+}
+
+section {
+	padding: 50px;
+	text-align: center;
+}
+
+.section_img_box {
+	display: inline-block;
+	margin-right: 20px;	
+}
+
+h4 {
+	text-align: left;
+	margin-top: 0;
+}
+
+hr {
+	margin-top: -20px;
+}
+
+footer {
+	background-color: #323230;
+	color: white;
+	padding: 15px 220px;
+}
+
+.skype_num {
+	color: #00aff0;
+}
+
