--- a/Escuela de danza/css/main.css
+++ b/Escuela de danza/css/main.css
@@ -1,31 +1,3 @@
-body {
-	font-family: Montserrat;
-}
-
-header {
-	padding: 50px;
-	text-align: center;
-	color: #192951;
-}
-
-ul {
-	list-style-type: none;
-	float: right;
-	margin: 30px 90px 0 0;
-}
-
-li {
-	float: left;
-	margin-right: 100px;
-}
-
-a {
-	text-decoration: none;
-	color: #808083;
-}
-
-/*Aquí termina el header*/
-
 #main_img {
 	background-image: url("../img/dance_1.jpg");
 	padding: 50px 100px;
@@ -62,3 +34,74 @@ a {
 	padding: 50px;
 	text-align: center;
 }
+
+.p_description {
+	width: 500px;
+	margin-left: 200px;
+}
+
+.separador_img {
+	height: 100px;
+	width: 100px;
+}
+
+.oferta_clases_button {
+	border-radius: 5px;
+	width: 300px;
+	margin-left: 340px;
+	color: #C3C6C5;
+}
+
+/*Aquí, termina la descripción y el botón de Oferta de Clases*/
+
+#nuestros_instructores {
+	margin: 30px 0 0 0;
+}
+
+.nuestros_instructores_row {
+	border: 2px solid #192951;
+	color: #C3C6C5;
+}
+
+.instructor1 {
+	background-image: url("../img/instructor_4.jpg");
+	height: 300px;
+	background-size: 700px;
+	background-position: -40px -30px;
+}
+
+.instructor2 {
+	background-image: url("../img/profesor_9.jpg");
+	background-size: 700px;
+	background-position: -40px -30px;
+	height: 300px;
+}
+
+.nuestros_instructores_button {
+	width: 500px;
+	text-align: center;
+	position: relative;
+	bottom: 60px;
+	margin: auto;
+}
+
+/*Aquí, termina Nuestros Instructores*/
+
+#mapa_box {
+	background-color: #192951;
+	padding: 100px;
+	color: white;
+	font-size: 12px;
+	line-height: 20px;
+}
+
+.visitanos_subheading {
+	margin: 30px 0 10px 0;
+}
+
+.map {
+	height: 300px;
+	margin-left: 30px;
+}
+
+/*Aquí, termina el mapa*/
